# conda-dump

./: README.md  Untitled.ipynb  dep_tree.py  main.py  pyproject.toml  test.ipynb  tree.py  ziputil.py
conda_dump/: dep_tree.py  main.py  ziputil.py
notebook/: Untitled.ipynb  test.ipynb  tree.ipynb  ziptest.ipynb
