[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "conda_dump"
version = "0.1.0"
authors = [
    { name="lyine", email="liuzhengyuan@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "packaging == 21.2"
]

[project.scripts]
conda-dump = "conda_dump.main:main"

[tool.setuptools.packages]
find = {} 


